# dflip_daisy

./: .gitignore  readme.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
KeyboardBase/: Column.kicad_sch  KeyboardBase.kicad_pcb  KeyboardBase.kicad_prl  KeyboardBase.kicad_pro  KeyboardBase.kicad_sch  SelectorDaisy.kicad_sch
KeyboardBase/Library.pretty/: PinHeader 2.00mm 01x07 SMD.kicad_mod
SwitchChain/: SelectorDaisy.kicad_sch  SwitchChain.kicad_pcb  SwitchChain.kicad_prl  SwitchChain.kicad_pro  SwitchChain.kicad_sch  SwitchDaisy.kicad_prl  SwitchDaisy.kicad_sch
circuit/ChainSimulation/: sim.html
circuit/KeyboardBase/: Column.kicad_pcb  Column.kicad_prl  Column.kicad_pro  Column.kicad_sch  KeyboardBase.kicad_pcb.hierpcb.json  KeyboardBase.kicad_pro  SelectorDaisy.kicad_sch  fp-lib-table
circuit/KeyboardBase/lib/molex/: Molex_Connector.kicad_sym
circuit/KeyboardBase/lib/molex/footprints.pretty/: CONN07_502352_MOL.kicad_mod
circuit/SwitchChain/: SelectorDaisy.kicad_sch  SwitchChain.kicad_pcb  SwitchChain.kicad_pcb.hierpcb.json  SwitchChain.kicad_pro  SwitchDaisy.kicad_pcb  SwitchDaisy.kicad_pro  SwitchDaisy.kicad_sch
firmware/rmk-custom-device/: .gitignore
firmware/rmk-custom-device/src/: matrix.rs
firmware/rmk-dflipdaisy/: Makefile.toml  vial.json
firmware/rmk-dflipdaisy-monolithic/: keyboard.toml  vial.json
firmware/rmk-dflipdaisy-monolithic/src/: main.rs
firmware/rmk-dflipdaisy/src/: keymap.rs  peripheral.rs
firmware/rmk-dflipdaisy/src/custom/: mod.rs  peripheral.rs
rmk-custom-device/: Cargo.toml
rmk-custom-device/src/: lib.rs
rmk-dflipdaisy/: Cargo.toml  keyboard.toml
rmk-dflipdaisy-monolithic/: Cargo.toml  Makefile.toml
rmk-dflipdaisy-monolithic/src/: keymap.rs  main.rs
rmk-dflipdaisy-monolithic/src/custom/: matrix.rs  mod.rs  monolithic.rs
rmk-dflipdaisy/src/: central.rs  macros.rs  peripheral.rs
rmk-dflipdaisy/src/custom/: central.rs  matrix.rs  mod.rs  peripheral.rs
