[package]
name = "rmk-custom-device"
version = "0.1.0"
edition = "2021"

[dependencies]
rmk = {git = "https://github.com/hyranno/rmk.git", branch = "main", default-features = false}
defmt = "0.3"
embassy-time = { version = "0.3", features = ["defmt"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = [
    "defmt-03",
], optional = true }

[features]
default = []
async_matrix = ["rmk/async_matrix", "dep:embedded-hal-async"]

