[package]
name = "rmk-dflipdaisy-monolithic"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { git = "https://github.com/hyranno/rmk.git", branch = "main", default-features = false, features = [
] }
rmk-custom-device = {path = "../rmk-custom-device"}
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.2", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.6", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "task-arena-size-32768",
] }
cortex-m-rt = "0.7.3"
portable-atomic = { version = "1.5", features = ["critical-section"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8.0"
embassy-usb = { version = "0.3", features = [
    "defmt",
    "usbd-hid",
    "max-interface-count-8",
    "max-handler-count-8",
] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = [
    "defmt-03",
], optional = true }
embedded-storage-async = "0.4"
embassy-futures = { version = "0.1", features = ["defmt"]}

# [features]
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]
[features]
default = ["col2row", "async_matrix"]
## If your PCB diode's direction is col2row, enable this feature. If it's row2col, disable this feature.
col2row = ["rmk/col2row"]
async_matrix = ["rmk/async_matrix", "rmk-custom-device/async_matrix", "dep:embedded-hal-async"]
rapid_debouncer = ["rmk/rapid_debouncer"]
_no_usb = ["rmk/_no_usb"]
_no_external_storage = ["rmk/_no_external_storage"]
nrf52840_ble = ["rmk/nrf52840_ble", "_nrf_ble"]
nrf52833_ble = ["rmk/nrf52833_ble", "_nrf_ble"]
nrf52832_ble = ["rmk/nrf52832_ble", "_nrf_ble", "_no_usb"]
nrf52811_ble = ["rmk/nrf52811_ble", "_nrf_ble", "_no_usb"]
nrf52810_ble = ["rmk/nrf52810_ble", "_nrf_ble", "_no_usb"]
esp32c3_ble = ["rmk/esp32c3_ble", "_esp_ble"]
esp32c6_ble = ["rmk/esp32c6_ble", "_esp_ble"]
esp32s3_ble = ["rmk/esp32s3_ble", "_esp_ble"]
_esp_ble = ["rmk/_esp_ble", "_ble", "_no_usb"]
_nrf_ble = ["rmk/_nrf_ble", "_ble"]
_ble = ["rmk/_ble", "_no_external_storage"]

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-dflipdaisy-monolithic"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
